--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,8 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+
+
 foundationdb/
+tmp/
+debug_test.go
