Use ubuntu and foundationdb deb package for building fdb-go docker image.

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,6 @@
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
 
-
-foundationdb/
+# fdb-search
 tmp/
 debug_test.go
