run foundation db with tini.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   fdb-search:
     image: fdb-go
-    command: go run main.go
+    command: ['go', 'run', 'main.go']
     working_dir: /root/go/src/github.com/hiroshi/fdb-search
     ports:
     - '1234:1234'
@@ -13,7 +13,7 @@ services:
     - foundationdb
   foundationdb:
     image: hiroshi3110/foundationdb:5.1.5-1_ubuntu-16.04
-    command: ./start.sh
+    command: ['/root/tini', '/root/start.sh']
     volumes:
     - fdb:/var/lib/foundationdb
     hostname: fdb
