--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
   foundationdb:
     image: hiroshi3110/foundationdb:5.1.5-1_ubuntu-16.04
     command: ['/root/tini', '/root/start.sh']
+    environment:
+      FDB_CLUSTER_FILE: '/var/lib/foundationdb/fdb.cluster'
     volumes:
     - fdb:/var/lib/foundationdb
     hostname: fdb
